force-app/main/default/objects/Cotizacion__c/Cotizacion__c.object-meta.xml
<CustomObject>
    <label>Cotizacion</label>
    <nameField>
        <displayFormat>COT-{0000}</displayFormat>
        <label>Numero de Cotizacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cotizaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>