force-app/main/default/objects/Cotizacion__c/fields/Condicion_Pago__c.field-meta.xml
<CustomField>
    <fullName>Condicion_Pago__c</fullName>
    <label>Condicion de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Credito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>