force-app/main/default/objects/Cotizacion__c/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <label>Costo Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>