force-app/main/default/objects/Cotizacion__c/fields/Credito_Vencido__c.field-meta.xml
<CustomField>
    <fullName>Credito_Vencido__c</fullName>
    <label>Credito Vencido</label>
    <type>Checkbox</type>
    <formula>AND(TEXT(Condicion_Pago__c) = "Credito", NOT(ISBLANK(Fecha_Vencimiento_Credito__c)), Fecha_Vencimiento_Credito__c &lt; TODAY(), Saldo_Pendiente__c &gt; 0)</formula>
</CustomField>