force-app/main/default/objects/Cotizacion__c/fields/Dias_Credito__c.field-meta.xml
<CustomField>
    <fullName>Dias_Credito__c</fullName>
    <label>Dias de Credito</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>