force-app/main/default/objects/Cotizacion__c/fields/Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega__c</fullName>
    <label>Fecha de Entrega Estimada</label>
    <type>Date</type>
</CustomField>