force-app/main/default/objects/Cotizacion__c/fields/Fecha_Entrega_Completa__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Entrega_Completa__c</fullName>
    <label>Fecha de Entrega Completa</label>
    <type>Date</type>
</CustomField>