force-app/main/default/objects/Cotizacion__c/fields/Margen_Promedio__c.field-meta.xml
<CustomField>
    <fullName>Margen_Promedio__c</fullName>
    <label>Margen Promedio %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <formula>IF(Costo_Total__c &gt; 0, (Subtotal__c - Costo_Total__c) / Costo_Total__c, 0)</formula>
</CustomField>