force-app/main/default/objects/Cotizacion__c/fields/Monto_Pagado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Pagado__c</fullName>
    <label>Monto Pagado</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>