force-app/main/default/objects/Cotizacion__c/fields/Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Observaciones__c</fullName>
    <label>Observaciones</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>