force-app/main/default/objects/Cotizacion__c/fields/Plazo_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Plazo_Entrega__c</fullName>
    <label>Plazo de Entrega</label>
    <type>Text</type>
    <length>255</length>
</CustomField>