force-app/main/default/objects/Cotizacion__c/fields/Saldo_Pendiente__c.field-meta.xml
<CustomField>
    <fullName>Saldo_Pendiente__c</fullName>
    <label>Saldo Pendiente</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Total__c - Monto_Pagado__c</formula>
</CustomField>