force-app/main/default/objects/Cotizacion__c/fields/Tipo_Cambio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cambio__c</fullName>
    <label>Tipo de Cambio</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>4</scale>
    <defaultValue>1</defaultValue>
</CustomField>