force-app/main/default/objects/Cotizacion__c/fields/Utilidad__c.field-meta.xml
<CustomField>
    <fullName>Utilidad__c</fullName>
    <label>Utilidad</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <formula>Subtotal__c - Costo_Total__c</formula>
</CustomField>