force-app/main/default/objects/Cotizacion__c/validationRules/Dias_Credito_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Dias_Credito_Requerido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Condicion_Pago__c) = "Credito", ISBLANK(Dias_Credito__c))</errorConditionFormula>
    <errorMessage>Dias de Credito es obligatorio cuando la condicion de pago es Credito.</errorMessage>
</ValidationRule>