force-app/main/default/objects/Cotizacion__c/validationRules/Dias_Credito_Solo_Credito.validationRule-meta.xml
<ValidationRule>
    <fullName>Dias_Credito_Solo_Credito</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Condicion_Pago__c) != "Credito", NOT(ISBLANK(Dias_Credito__c)), Dias_Credito__c > 0)</errorConditionFormula>
    <errorMessage>Dias de Credito solo aplica cuando la condicion de pago es Credito.</errorMessage>
</ValidationRule>